fix alignment in left nav

--- a/app/assets/stylesheets/side_nav.scss
+++ b/app/assets/stylesheets/side_nav.scss
@@ -166,10 +166,15 @@ nav.side-nav {
       font-weight: 400;
       font-style: normal;
       font-size: .8em;
-      line-height: 1em;
     }
   }
   *[data-toggle=collapse][aria-expanded=true] > .toc-angle {
     transform: rotate(90deg);
+  }
+  .left-nav-activities {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
   }
 }
